--- a/WpfApp2/MainWindow.xaml
+++ b/WpfApp2/MainWindow.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <Button x:Name="SendMessage" Content="Send message" HorizontalAlignment="Left" Margin="123,399,0,0" VerticalAlignment="Top" Width="87" Click="SendMessage_Click"/>
         <TextBox x:Name="messageBox" HorizontalAlignment="Left" Height="33" Margin="216,386,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="576"/>
-        <ListBox x:Name="conversationBox" HorizontalAlignment="Left" Height="381" Margin="216,0,0,0" VerticalAlignment="Top" Width="576"/>
+        <ListBox x:Name="conversationBox" ScrollViewer.CanContentScroll="False" HorizontalAlignment="Left" Height="381" Margin="216,0,0,0" VerticalAlignment="Top" Width="576"/>
         <Button x:Name="imageButton" Content="Send Image" HorizontalAlignment="Left" Margin="123,374,0,0" VerticalAlignment="Top" Width="75" Click="imageButton_Click"/>
 
     </Grid>
