--- a/WpfApp2/MainWindow.xaml
+++ b/WpfApp2/MainWindow.xaml
@@ -5,11 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp2"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="EliteMessenger1337" Height="460" Width="810"
+        ResizeMode="NoResize"
+        >
     <Grid>
+        <DockPanel>
+            <Menu DockPanel.Dock="Top">
+                <MenuItem x:Name="connectToNewIpMenuButton" Header="_Connect to new IP"/>
+                <MenuItem x:Name="myIPMenuButton" Header="MyIP" Click="myIPMenuButton_Click"/>
+
+            </Menu>
+            <StackPanel></StackPanel>
+        </DockPanel>
         <Button x:Name="SendMessage" Content="Send message" HorizontalAlignment="Left" Margin="123,399,0,0" VerticalAlignment="Top" Width="87" Click="SendMessage_Click"/>
         <TextBox x:Name="messageBox" HorizontalAlignment="Left" Height="33" Margin="216,386,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="576"/>
-        <ListBox x:Name="conversationBox" ScrollViewer.CanContentScroll="False" HorizontalAlignment="Left" Height="381" Margin="216,0,0,0" VerticalAlignment="Top" Width="576"/>
+        <ListBox x:Name="conversationBox" ScrollViewer.CanContentScroll="False" HorizontalAlignment="Left" Height="362" Margin="216,19,0,0" VerticalAlignment="Top" Width="576"/>
         <Button x:Name="imageButton" Content="Send Image" HorizontalAlignment="Left" Margin="123,374,0,0" VerticalAlignment="Top" Width="75" Click="imageButton_Click"/>
 
     </Grid>
