--- a/WpfApp2/MainWindow.xaml
+++ b/WpfApp2/MainWindow.xaml
@@ -15,12 +15,16 @@
                 <MenuItem x:Name="myIPMenuButton" Header="MyIP" Click="myIPMenuButton_Click"/>
 
             </Menu>
-            <StackPanel></StackPanel>
+            <Grid>
+                <Button x:Name="SendMessage" Content="Send message" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="102" Click="SendMessage_Click" Margin="111,362,0,0" Height="33"/>
+                <ListBox x:Name="conversationBox" ScrollViewer.CanContentScroll="False" HorizontalAlignment="Right" Height="362"  VerticalAlignment="Top" Width="576" Margin="0,0,10,0" ItemsSource="{Binding Path=TextMessageBox}"/>
+                <Button x:Name="imageButton" Content="Send Image" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="96" Click="imageButton_Click" Margin="10,362,0,0" Height="33"/>
+                <TextBox x:Name="messageBox" HorizontalAlignment="Right" Height="33"  TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="576" Margin="0,362,10,0"/>
+                <ListBox x:Name="contactList" HorizontalAlignment="Left" Height="326" Margin="10,31,0,0" VerticalAlignment="Top" Width="189" SelectionChanged="contactList_SelectionChanged"/>
+                <TextBlock HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="My contacts:" VerticalAlignment="Top"/>
+
+            </Grid>
         </DockPanel>
-        <Button x:Name="SendMessage" Content="Send message" HorizontalAlignment="Left" Margin="123,399,0,0" VerticalAlignment="Top" Width="87" Click="SendMessage_Click"/>
-        <TextBox x:Name="messageBox" HorizontalAlignment="Left" Height="33" Margin="216,386,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="576"/>
-        <ListBox x:Name="conversationBox" ScrollViewer.CanContentScroll="False" HorizontalAlignment="Left" Height="362" Margin="216,19,0,0" VerticalAlignment="Top" Width="576"/>
-        <Button x:Name="imageButton" Content="Send Image" HorizontalAlignment="Left" Margin="123,374,0,0" VerticalAlignment="Top" Width="75" Click="imageButton_Click"/>
 
     </Grid>
 </Window>
