--- a/WpfApp2/TextMessageBox.xaml
+++ b/WpfApp2/TextMessageBox.xaml
@@ -5,10 +5,12 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WpfApp2" Height="45" Width="445">
     <Grid Margin="0,0,45,0">
-        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="45" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="460"/>
+        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="30" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="400" Margin="0,15,0,0" TextChanged="textBox_TextChanged"/>
         <Image x:Name="imageBox" HorizontalAlignment="Left" Height="45" Margin="400,0,-60,0" VerticalAlignment="Top" Width="45">
             <Image.Source>userIcon.png</Image.Source>
         </Image>
+        <TextBlock HorizontalAlignment="Left" Margin="0,-1,0,0" TextWrapping="Wrap" Text="From: " VerticalAlignment="Top"/>
+        <TextBlock x:Name="user" HorizontalAlignment="Left" Margin="33,-1,0,0" TextWrapping="Wrap" Text="user" VerticalAlignment="Top"/>
 
     </Grid>
 </UserControl>
